--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
         "style-loader": "^0.19.0",
         "tailwindcss": "^0.2.2",
         "webpack": "^3.8.1"
+    },
+    "dependencies": {
+        "postcss-import": "^11.0.0"
     }
 }
